// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShuttlePicker renders 1`] = `
<div
  className="c-shuttle-picker-container c-shuttle-picker-container--visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      onClick={[Function]}
      title="Collapse"
    >
      <span
        dangerouslySetInnerHTML={
          {
            "__html": "<svg/>",
          }
        }
      />
    </button>
  </div>
  <div
    className="c-shuttle-picker u-hideable"
  >
    <div
      className="c-shuttle-picker__label"
    >
      Run #
    </div>
    <ul
      className="c-shuttle-picker__route-list c-shuttle-picker__shuttle-run-list"
    >
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            All Specials (999*)
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          >
            4
          </span>
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            Special 999 555
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Blue 999 501
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Green 999 502
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Orange 999 503
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Red 999 504
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            CR 999 505
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            999 511
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            999 512
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
    </ul>
    <div
      className="c-shuttle-picker__label"
    >
      Routes
    </div>
    <ul
      className="c-shuttle-picker__route-list c-shuttle-picker__shuttle-route-list"
    >
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Blue Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Orange Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Red Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line Shuttle
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line B Shuttle
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Haverhill Line Shuttle
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ShuttlePicker renders loaded state with no shuttles 1`] = `
<div
  className="c-shuttle-picker-container c-shuttle-picker-container--visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      onClick={[Function]}
      title="Collapse"
    >
      <span
        dangerouslySetInnerHTML={
          {
            "__html": "<svg/>",
          }
        }
      />
    </button>
  </div>
  <div
    className="c-shuttle-picker u-hideable"
  >
    <div
      className="c-shuttle-picker__label"
    >
      Run #
    </div>
    <ul
      className="c-shuttle-picker__route-list c-shuttle-picker__shuttle-run-list"
    >
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            All Specials (999*)
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            Special 999 555
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Blue 999 501
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Green 999 502
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Orange 999 503
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            Red 999 504
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--with-count c-shuttle-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="c-shuttle-picker__route-list-button-name"
          >
            <span
              dangerouslySetInnerHTML={
                {
                  "__html": "<svg/>",
                }
              }
            />
            CR 999 505
          </span>
          <span
            className="c-shuttle-picker__route-list-button-count"
          />
        </button>
      </li>
    </ul>
    <div
      className="c-shuttle-picker__label"
    >
      Routes
    </div>
    <ul
      className="c-shuttle-picker__route-list c-shuttle-picker__shuttle-route-list"
    >
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Blue Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Orange Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Red Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line Shuttle
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line B Shuttle
        </button>
      </li>
      <li>
        <button
          className="c-shuttle-picker__route-list-button c-shuttle-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Haverhill Line Shuttle
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ShuttlePicker renders loading state 1`] = `
<div
  className="c-shuttle-picker-container c-shuttle-picker-container--visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      onClick={[Function]}
      title="Collapse"
    >
      <span
        dangerouslySetInnerHTML={
          {
            "__html": "<svg/>",
          }
        }
      />
    </button>
  </div>
  <div
    className="c-shuttle-picker u-hideable"
  >
    loading...
  </div>
</div>
`;
